# aftercode

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  install.ps1  install.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/aftercode-cli/: Cargo.toml
crates/aftercode-cli/src/: client.rs  config.rs  credentials.rs  main.rs
crates/aftercode-cli/src/collect/: errors.rs  git.rs  hooks.rs  mod.rs
crates/aftercode-cli/src/commands/: mod.rs
crates/aftercode-cli/src/privacy/: ignore.rs  mod.rs  secrets.rs
crates/aftercode-cli/src/session/: cursor.rs
crates/aftercode-server/: Cargo.toml
crates/aftercode-server/src/: auth.rs  config.rs  error.rs  main.rs  settings.rs  state.rs  testutil.rs  worker.rs
crates/aftercode-server/src/db/: mod.rs  models.rs  queries.rs
crates/aftercode-server/src/pipeline/: assemble.rs  mod.rs  normalize.rs  rank.rs
crates/aftercode-server/src/providers/: anthropic.rs  llm.rs  mod.rs  openai.rs  tts.rs
crates/aftercode-server/src/routes/: cli.rs  cli_auth.rs  episodes.rs  health.rs  mod.rs  projects.rs  sessions.rs  settings.rs
crates/aftercode-server/src/storage/: blob.rs  localfs.rs  mod.rs  s3.rs
docs/: ARCHITECTURE.md  PRD.md  SELF_HOSTING.md
docs/superpowers/plans/: 2026-06-14-aftercode-A-core-and-backend.md  2026-06-14-aftercode-B-cli.md
docs/superpowers/specs/: 2026-06-14-aftercode-cli-backend-design.md  2026-06-15-session-aware-collection-design.md  2026-06-15-session-handoff-and-guardrail.md
migrations/: 0001_init.sql  0002_settings.sql
web/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  api.ts  auth.test.ts  auth.ts  index.css  types.ts
web/src/components/: EpisodeCard.tsx  EpisodeDetail.tsx  Library.tsx  PlayerBar.tsx  Settings.tsx  SignIn.tsx  TopicFilter.tsx
web/src/lib/: filter.test.ts  filter.ts  format.ts
