[workspace]
resolver = "2"
members = ["crates/aftercode-core", "crates/aftercode-server", "crates/aftercode-cli"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.4"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1"
