[package]
name = "aftercode-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "aftercode"
path = "src/main.rs"

[dependencies]
aftercode-core = { path = "../aftercode-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
git2 = { version = "0.19", default-features = false }
ignore = "0.4"
regex = "1"
dirs = "5"
indicatif = "0.17"
chrono = { version = "0.4", features = ["clock"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
